2007-02-22  Pavel Roskin  <proski@gnu.org>

	* stage2/iso9660.h: Remove unnecessary packed attributes.

2007-02-22  Robert Millan  <rmh@aybabtu.com>

	* util/mkbimage: Update my email address, and remove my name from
	some places where unnecessary credit is given.

2006-09-10  Pavel Roskin  <proski@gnu.org>

	* netboot/natsemi.c: Fix compile error with gcc 4.1.1.  Cast
	cannot make a variable volatile - it should be declared as such.
	* netboot/sis900.c: Likewise.

2006-09-08  Pavel Roskin  <proski@gnu.org>

	* netboot/etherboot.h: Remove incorrect extern declarations of
	the variables later declared static.  Move BOOTP_DATA_ADDR ...
	* netboot/main.c: ... here.  Eliminate end_of_rfc1533 - it's
	write-only.

2006-06-24  Yoshinori K. Okuji  <okuji@enbug.org>

	* docs/grub.texi: Changed the license term to the GNU Free
	Documentation License 1.2.

	* docs/multiboot.texi: Reformatted to show the license term
	and the version number explicitly.
	
	* docs/fdl.texi: New file.
	
	* docs/Makefile.am (grub_TEXINFOS): Added fdl.texi.

2006-06-24  Robert Millan  <robertmh@gnu.org>

	* lib/device.c (write_to_partition): /dev/ataraid/ and /dev/rd/
	partitions have a "p" prefix.  Add it.

2006-06-24  Robert Millan  <robertmh@gnu.org>

	* lib/device.c (get_i2o_disk_name): New function.
	(init_device_map) [__linux__]: Add support for I2O devices.

2006-05-02  Pavel Roskin  <proski@gnu.org>

	* stage2/stage2.c (run_menu): Fix "savedefault" to save only top
	level menu positions.  Remember current position when calling a
	submenu.  Don't recalculate it when booting from a submenu.

	* grub/main.c (main): Make sure the boot drive number doesn't
	exceed 255.

2006-05-02  Vesa Jaaskelainen  <chaac@nic.fi>

	* stage2/shared.h (vbe_mode): Back ported aligment fix from GRUB 2
	to GRUB Legacy.  Problem reported by Gerardo Richarte.

2006-04-23  Robert Millan  <robertmh@gnu.org>

	* grub/asmstub.c (get_diskinfo): Optimize sysctl routine.

2006-04-20  Robert Millan  <robertmh@gnu.org>
